; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/omap/extr_lcd_mipid.c_send_init_string.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/omap/extr_lcd_mipid.c_send_init_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mipid_device = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@__const.send_init_string.initpar = private unnamed_addr constant [3 x i32] [i32 258, i32 256, i32 256], align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mipid_device*)* @send_init_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @send_init_string(%struct.mipid_device* %0) #0 {
  %2 = alloca %struct.mipid_device*, align 8
  %3 = alloca [3 x i32], align 4
  store %struct.mipid_device* %0, %struct.mipid_device** %2, align 8
  %4 = bitcast [3 x i32]* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %4, i8* align 4 bitcast ([3 x i32]* @__const.send_init_string.initpar to i8*), i64 12, i1 false)
  %5 = load %struct.mipid_device*, %struct.mipid_device** %2, align 8
  %6 = getelementptr inbounds [3 x i32], [3 x i32]* %3, i64 0, i64 0
  %7 = call i32 @mipid_write(%struct.mipid_device* %5, i32 194, i32* %6, i32 12)
  %8 = load %struct.mipid_device*, %struct.mipid_device** %2, align 8
  %9 = load %struct.mipid_device*, %struct.mipid_device** %2, align 8
  %10 = getelementptr inbounds %struct.mipid_device, %struct.mipid_device* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @set_data_lines(%struct.mipid_device* %8, i32 %12)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @mipid_write(%struct.mipid_device*, i32, i32*, i32) #2

declare dso_local i32 @set_data_lines(%struct.mipid_device*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
